# learnindepth

./: README.md
C/Assignment_1/: CMakeLists.txt  main.c
C/Assignment_1/include/: Assignment_1.h
C/Assignment_1/src/: Assignment_1.c
C/Assignment_2/: main.c
C/Assignment_2/src/: Assignment_2.c
C/Assignment_3/src/: Assignment_3.c
C/Assignment_4/include/: Assignment_4.h
C/Assignment_4/src/: Assignment_4.c
C/Assignment_5/: main.c
mastering_embedded_systems/c/Assignment_2/: CMakeLists.txt
mastering_embedded_systems/c/Assignment_2/include/: Assignment_2.h
mastering_embedded_systems/c/Assignment_3/: CMakeLists.txt  main.c
mastering_embedded_systems/c/Assignment_3/include/: Assignment_3.h
mastering_embedded_systems/c/Assignment_4/: CMakeLists.txt  main.c
mastering_embedded_systems/c/Assignment_5/: CMakeLists.txt
mastering_embedded_systems/c/Assignment_5/include/: Assignment_5.h
mastering_embedded_systems/c/Assignment_5/src/: Assignment_5.c
mastering_embedded_systems/embedded_c/labs/1_arm926ej-s/inc/: uart.h
mastering_embedded_systems/embedded_c/labs/1_arm926ej-s/src/: main.c  startup.s  uart.c
